--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <h> About Myself </h>
 
-<p> I am an engineering student studying in Vidyavardhaka College Of Engineering.
-    My hobbies are reading books, playing sports.  </p>
+<p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.
+    My hobbies are reading books, playing sports.</center>  </p>
 
 </body>
 </html>
