--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <body>
+<bgcolor="DodgerBlue">
 
 <h> About Myself </h>
 
-<p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.
-    My hobbies are reading books, playing sports.</center>  </p>
+<p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.<center>  </p>
+   <p><center> My hobbies are reading books, playing sports.<center>  </p>
 
 </body>
 </html>
