--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<bgcolor="DodgerBlue">
+<bgcolor="red">
 
-<h> About Myself </h>
+<h> <center>About Myself <center></h>
 
 <p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.<center>  </p>
    <p><center> My hobbies are reading books, playing sports.<center>  </p>
