--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <bgcolor="red">
 
-<h> <center>About Myself <center></h>
+<h> <center>style="background-color:DodgerBlue;"About Myself <center></h>
 
 <p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.<center>  </p>
    <p><center> My hobbies are reading books, playing sports.<center>  </p>
