--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-<body>
-<bgcolor="red">
+<body style="background-color:DodgerBlue;>
 
-<h> <center>style="background-color:DodgerBlue;"About Myself <center></h>
+<h> <center>"About Myself <center></h>
 
 <p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.<center>  </p>
    <p><center> My hobbies are reading books, playing sports.<center>  </p>
