--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-<body >
+<body bgcolor="red">
 
-<h> <center>"About Myself <center></h>
+<h><b><center>About Myself <center><b></h>
 
 <p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.<center>  </p>
    <p><center> My hobbies are reading books, playing sports.<center>  </p>
