--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor="red">
-
+<marquee direction="right">HELLO!!!</marquee>
 <h><b><center>About Myself <center><b></h>
 
 <p><center> I am an engineering student studying in Vidyavardhaka College Of Engineering.<center>  </p>
